<resources>
    <!-- Main -->
    <string name="app_name">Smart Home</string>
    <!-- *.html -->
    <string name="wifi_html">wifi.html</string>
    <string name="server_html">server.html</string>
    <!-- Server is not connected -->
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <!-- Preferences -->
    <string name="refreshing">Refreshing…</string>
    <string name="server_ip">IP</string>
    <string name="server">Server</string>
    <string name="server_port">Port</string>
    <string name="client">Client</string>
    <string name="caching">Caching</string>
    <string name="caching_on">Temporary files will be saved and the last session will be preserved</string>
    <string name="caching_off">Temporary files will not be saved and the last session will not be preserved</string>
    <string name="mqtt_port">MQTT port</string>
    <!-- Notifications -->
    <string name="app_is_running">App is running in the background</string>
    <string name="doorbird">Doorbird</string>
    <string name="doorbird_doorbell">Doorbird - doorbell</string>
    <string name="doorbird_doorbell_message">Someone is behind the door</string>
    <string name="doorbird_motionsensor">Doorbird - motion</string>
    <string name="doorbird_motionsensor_message">Someone moved in front of the doorbell</string>
    <!-- Widget -->
    <string name="appwidget_text">Doorbird unlock</string>
    <string name="unlock">Unlock</string>
    <string name="unlock_send">Unlock request send…</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="device_control">Device control</string>
    <string name="device_id">Device ID</string>
    <string name="camera"><![CDATA[Camera & flashlight]]></string>
    <string name="camera_off">Server cannot use your camera or flashlight</string>
    <string name="camera_on">Server can use your camera and flashlight</string>
    <string name="audio">Audio</string>
    <string name="audio_off">Server cannot use your speaker</string>
    <string name="audio_on">Server can use your speaker</string>
    <string name="vibration">Vibration</string>
    <string name="vibration_off">Server cannot use vibrations</string>
    <string name="vibration_on">Server can use vibrations</string>
    <string name="gps">GPS location</string>
    <string name="gps_off">Server cannot use your GPS location</string>
    <string name="gps_on">Server can use your GPS location</string>
</resources>